[gd_scene load_steps=7 format=3 uid="uid://c1i05l80n55vk"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_h2g7h"]
[ext_resource type="PackedScene" uid="uid://cntiwueyltayq" path="res://menu/menu_background.tscn" id="1_hr51q"]
[ext_resource type="Texture2D" uid="uid://bt0jajm413vkn" path="res://assets/base_body.png" id="3_fd3ux"]
[ext_resource type="PackedScene" uid="uid://r275w3l6osq3" path="res://components/ui/button_scene.tscn" id="4_ff1qp"]
[ext_resource type="PackedScene" uid="uid://cph6t58p7p6np" path="res://components/ui/border_full.tscn" id="5_h2k2v"]
[ext_resource type="PackedScene" uid="uid://cng8yewksr3xk" path="res://components/unit/base_unit/base_unit.tscn" id="6_v5gaa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2g7h")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -26.0
offset_right = 45.0
grow_vertical = 0
text = "0.0.2"

[node name="MenuBackground" parent="." instance=ExtResource("1_hr51q")]
layout_mode = 1
color = Color(0.211765, 0.101961, 0.4, 0.415686)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -79.0
offset_right = 64.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="HeadingContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BrandingIcon" type="TextureRect" parent="Container/HeadingContainer"]
layout_mode = 2
texture = ExtResource("3_fd3ux")
expand_mode = 4

[node name="Title" type="Label" parent="Container/HeadingContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Colonite"

[node name="ButtonContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="StartButtonScene" parent="Container/ButtonContainer" instance=ExtResource("4_ff1qp")]
layout_mode = 2
text = "Start"
target_scene = "res://levels/level_1.tscn"

[node name="HowToPlayButtonScene" parent="Container/ButtonContainer" instance=ExtResource("4_ff1qp")]
layout_mode = 2
text = "How to Play"
target_scene = "res://how_to_play/how_to_play_1.tscn"

[node name="SettingsButtonScene" parent="Container/ButtonContainer" instance=ExtResource("4_ff1qp")]
layout_mode = 2
text = "Settings"
target_scene = "res://menu/settings.tscn"

[node name="Arena" type="Node2D" parent="."]

[node name="BorderFull" parent="Arena" instance=ExtResource("5_h2k2v")]

[node name="Colies" type="Node2D" parent="Arena"]

[node name="BaseUnitBig" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(576, 198)
rotation = -0.785398
scale = Vector2(8.16001, 8.16001)
should_move = false
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitWhite1" parent="Arena/Colies" instance=ExtResource("6_v5gaa")]
position = Vector2(399, 222)

[node name="BaseUnitWhite2" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(920, 393)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitWhite3" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(344, 403)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitGreen1" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(163, 531)
BODY_COLOR = Color(0.419608, 1, 0.517647, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitGreen2" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(945, 144)
BODY_COLOR = Color(0.419608, 1, 0.517647, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitGreen3" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(114, 91)
BODY_COLOR = Color(0.419608, 1, 0.517647, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitOrange1" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(120, 289)
BODY_COLOR = Color(1, 0.733333, 0.254902, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitOrange2" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(770, 571)
BODY_COLOR = Color(1, 0.733333, 0.254902, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitOrange3" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(787, 83)
BODY_COLOR = Color(1, 0.733333, 0.254902, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitBlue1" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(765, 250)
BODY_COLOR = Color(0.321569, 0.403922, 1, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitBlue2" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(283, 85)
BODY_COLOR = Color(0.321569, 0.403922, 1, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")

[node name="BaseUnitBlue3" parent="Arena/Colies" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_v5gaa")]
position = Vector2(423, 567)
BODY_COLOR = Color(0.321569, 0.403922, 1, 1)
health_component = NodePath("../BaseUnitWhite1/HealthComponent")
attack_component = NodePath("../BaseUnitWhite1/AttackComponent")
